feature: return if service accounts are in group
The UI needs a way to discern which service accounts are already present
in the group, so that they can show them as either enabled or disabled
when presenting them to the user.

RHCLOUD-30299
