# docs/source/specs/openapi.json
@@ -1275,6 +1275,18 @@
           },
           {
             "in": "query",
+            "name": "service_account_client_ids",
+            "required": false,
+            "description": "By specifying a list of client IDs with this query parameter, RBAC will return an object with the specified client ID and it's matching boolean value to flag whether the client ID is present in the group or not",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
+            "in": "query",
             "name": "service_account_description",
             "required": false,
             "description": "Parameter for filtering the service accounts by their description.",
